dataset1235/2025-2/2868285114/users/2107547248/executions/4269873056_208040576.log
== SUBMISSION (2025-08-26 22:22:23)
-- CODE: 
preco = float(input())
preco_final = preco*(15 / 100)
precooo = preco - preco_final
print(precooo)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1200.00
---- correct output:
1020.0
---- user output:
1020.0
-- TEST CASE 2:
---- input:
100.0
---- correct output:
85.0
---- user output:
85.0
-- TEST CASE 3:
---- input:
15.0
---- correct output:
12.75
---- user output:
12.75
-- TEST CASE 4:
---- input:
10.0
---- correct output:
8.5
---- user output:
8.5
-- TEST CASE 5:
---- input:
200.0
---- correct output:
170.0
---- user output:
170.0
-- TEST CASE 6:
---- input:
20.0
---- correct output:
17.0
---- user output:
17.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 22:21:59)
-- CODE: 
preco = float(input()
preco_final =preco*(15 / 100)
precooo = preco - preco_final
print(precooo)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1200.00
---- correct output:
1020.0
-- ERROR:
File "XXXX", line 1
    preco = float(input()
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
100.0
---- correct output:
85.0
-- ERROR:
File "XXXX", line 1
    preco = float(input()
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
15.0
---- correct output:
12.75
-- ERROR:
File "XXXX", line 1
    preco = float(input()
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
10.0
---- correct output:
8.5
-- ERROR:
File "XXXX", line 1
    preco = float(input()
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
200.0
---- correct output:
170.0
-- ERROR:
File "XXXX", line 1
    preco = float(input()
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
20.0
---- correct output:
17.0
-- ERROR:
File "XXXX", line 1
    preco = float(input()
                 ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 22:15:46)
-- CODE: 
preco = float(input())
preco_final =preco *(15 / 100)
preco = preco - preco_final
print(precooo)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1200.00
---- correct output:
1020.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(precooo)
          ^^^^^^^
NameError: name 'precooo' is not defined. Did you mean: 'preco'?
-- TEST CASE 2:
---- input:
100.0
---- correct output:
85.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(precooo)
          ^^^^^^^
NameError: name 'precooo' is not defined. Did you mean: 'preco'?
-- TEST CASE 3:
---- input:
15.0
---- correct output:
12.75
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(precooo)
          ^^^^^^^
NameError: name 'precooo' is not defined. Did you mean: 'preco'?
-- TEST CASE 4:
---- input:
10.0
---- correct output:
8.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(precooo)
          ^^^^^^^
NameError: name 'precooo' is not defined. Did you mean: 'preco'?
-- TEST CASE 5:
---- input:
200.0
---- correct output:
170.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(precooo)
          ^^^^^^^
NameError: name 'precooo' is not defined. Did you mean: 'preco'?
-- TEST CASE 6:
---- input:
20.0
---- correct output:
17.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(precooo)
          ^^^^^^^
NameError: name 'precooo' is not defined. Did you mean: 'preco'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 22:15:58)
-- CODE: 
preco = float(input())
preco_final =preco*(15 / 100)
preco = preco - preco_final
print(precooo)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1200.00
---- correct output:
1020.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(precooo)
          ^^^^^^^
NameError: name 'precooo' is not defined. Did you mean: 'preco'?
-- TEST CASE 2:
---- input:
100.0
---- correct output:
85.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(precooo)
          ^^^^^^^
NameError: name 'precooo' is not defined. Did you mean: 'preco'?
-- TEST CASE 3:
---- input:
15.0
---- correct output:
12.75
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(precooo)
          ^^^^^^^
NameError: name 'precooo' is not defined. Did you mean: 'preco'?
-- TEST CASE 4:
---- input:
10.0
---- correct output:
8.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(precooo)
          ^^^^^^^
NameError: name 'precooo' is not defined. Did you mean: 'preco'?
-- TEST CASE 5:
---- input:
200.0
---- correct output:
170.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(precooo)
          ^^^^^^^
NameError: name 'precooo' is not defined. Did you mean: 'preco'?
-- TEST CASE 6:
---- input:
20.0
---- correct output:
17.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(precooo)
          ^^^^^^^
NameError: name 'precooo' is not defined. Did you mean: 'preco'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
